<resources>
    <string name="app_name">Obhiya Car Wash Consumer</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="network_failure">Network Failure</string>
    <string name="conversion_error">Conversion Error</string>
    <string name="logout">Logout</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="number_hint">123456789</string>
    <string name="password_hint">********</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="update">Update</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
</resources>