<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/topHeader"
        layout="@layout/common_header_layout" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topHeader">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_14sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_8sdp"
                app:srcCompat="@drawable/ic_car_wash_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewTitle"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/new_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etNewPassword"
                style="@style/EditText"
                android:layout_marginTop="@dimen/_7sdp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewTitle"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/confirm_new_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etConfirmPassword"
                style="@style/EditText"
                android:layout_marginTop="@dimen/_7sdp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdate"
                style="@style/Button"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/avalon_demi"
                android:text="@string/update"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>